fix:lists closing when on mobile

--- a/assets/css/style4.css
+++ b/assets/css/style4.css
@@ -385,7 +385,7 @@ a:hover {
 
 
 
-    ul {
+    nav ul {
         position: fixed;
         width: 100%;
         height: 100vh;
